Many changes, cleaned-up a lot of old stuff, added credit card encrypted storage, and support rebrandable backups.